# directx-playground

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  compile_shader.bat
cmake/: HLSL.cmake
src/11/: dxgi_info_manager.cpp  exception.cpp  exception.hpp  main.cpp  renderer.cpp  renderer.hpp
src/11/shaders/: main.pix.hlsl  main.vert.cso  main.vert.hlsl
src/12/: Renderer.cpp  Renderer.hpp  main.cpp
